minio-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: minio
spec:
  updateStrategy:
    type: RollingUpdate
  serviceName: minio
  template:
    metadata:
      labels:
        app: minio
        project: telephone-org
        environment: production
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: minio
        image: minio/minio:latest
        args:
        - server
        - /data
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: minio-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: minio-data
    spec:
      storageClassName: local-storage
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 50Gi
