minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
    project: telephoneorg
    environment: production
spec:
  ports:
  - port: 9000
    targetPort: 9000
  clusterIP: None
  selector:
    app: minio
    project: telephoneorg
    environment: production
