minio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s3.valuphone.com
  annotations:
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: 'nginx'
    ingress.kubernetes.io/proxy-connect-timeout: '1800'
    ingress.kubernetes.io/proxy-read-timeout: '1800'
    ingress.kubernetes.io/proxy-send-timeout: '1800'
spec:
  tls:
  - hosts:
    - s3.valuphone.com
    secretName: s3-valuphone-com-tls
  rules:
  - host: s3.valuphone.com
    http:
      backend:
        serviceName: minio
        servicePort: 9000
